Cambio de configuracion

--- a/ecommerce/SimplCommerce/src/SimplCommerce.WebHost/appsettings.json
+++ b/ecommerce/SimplCommerce/src/SimplCommerce.WebHost/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1439;Database=SimplCommerce;User Id=sa; Password=ASD123456789asd;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=192.168.1.112,1439;Database=SimplCommerce;User Id=sa; Password=ASD123456789asd;MultipleActiveResultSets=True;"
   },
   "Authentication" : {
     "Facebook" : {
