--- a/ecommerce/SimplCommerce/src/SimplCommerce.WebHost/appsettings.docker.json
+++ b/ecommerce/SimplCommerce/src/SimplCommerce.WebHost/appsettings.docker.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Host=simpldb;Port=5432;Database=simplcommerce;Pooling=true;"
+    "DefaultConnection": "Server=localhost,1439;Database=SimplCommerce;User Id=sa; Password=ASD123456789asd;MultipleActiveResultSets=True;"
   },
   "Authentication": {
     "Facebook": {
