--- a/ecommerce/SimplCommerce/src/SimplCommerce.WebHost/appsettings.docker.json
+++ b/ecommerce/SimplCommerce/src/SimplCommerce.WebHost/appsettings.docker.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1439;Database=SimplCommerce;User Id=sa; Password=ASD123456789asd;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=127.0.0.1,1439;Database=SimplCommerce;User Id=sa; Password=ASD123456789asd;MultipleActiveResultSets=True;"
   },
   "Authentication": {
     "Facebook": {
