--- a/ecommerce/SimplCommerce/src/SimplCommerce.WebHost/SimplCommerce.WebHost.csproj
+++ b/ecommerce/SimplCommerce/src/SimplCommerce.WebHost/SimplCommerce.WebHost.csproj
@@ -38,7 +38,7 @@
     <ProjectReference Include="..\Modules\SimplCommerce.Module.Core\SimplCommerce.Module.Core.csproj" />
     <ProjectReference Include="..\Modules\SimplCommerce.Module.Localization\SimplCommerce.Module.Localization.csproj" />
     <ProjectReference Include="..\Modules\SimplCommerce.Module.EmailSenderSmtp\SimplCommerce.Module.EmailSenderSmtp.csproj" />
-    <ProjectReference Include="..\Modules\SimplCommerce.Module.StorageLocal\SimplCommerce.Module.StorageLocal.csproj" />
+    <ProjectReference Include="..\Modules\SimplCommerce.Module.StorageAmazonS3\SimplCommerce.Module.StorageAmazonS3.csproj" />
   </ItemGroup>
 
   <ItemGroup>
