--- a/ecommerce/SimplCommerce/src/SimplCommerce.WebHost/appsettings.json
+++ b/ecommerce/SimplCommerce/src/SimplCommerce.WebHost/appsettings.json
@@ -32,5 +32,13 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "AWS": {
+    "S3": {
+      "RegionEndpointName": "us-west-1",
+      "AccessKeyId": "AKIAI4SDFDKOJPZLQKMA",
+      "SecretAccessKey": "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",
+      "BucketName": "picabucket"
+    }
   }
 }
